API fetch Completed

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -102,14 +102,18 @@
 /* This is for anything bigger than a tablet*/
 @media (min-width: 1200px) {
     .navbar ul {
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
-        padding: 20px;
+        width: 25%;
+        margin-left: 50;
+        margin-right: 50;
+        padding:0px;
         background-color: bisque
     }
     
 }
 footer{
     background-color: gray;
+}
+
+html{
+    scroll-behavior: smooth;
 }
